--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,19 +142,17 @@ else()
   else()
     cmake_minimum_required(VERSION 3.5)
   endif()
-
     project(libsmb2
             LANGUAGES C
             VERSION 4.0.0
     )
-
     set(SOVERSION 1 CACHE STRING "" FORCE)
 
     set(INSTALL_LIB_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}" CACHE PATH "Installation directory for libraries")
     set(INSTALL_INC_DIR "${CMAKE_INSTALL_PREFIX}/include" CACHE PATH "Installation directory for headers")
     set(INSTALL_PKGCONFIG_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/pkgconfig" CACHE PATH "Installation directory for pkgconfig (.pc) files")
     set(INSTALL_CMAKE_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/cmake/libsmb2" CACHE PATH "Installation directory for cmake (.cmake) files")
-  if(CMAKE_SYSTEM_NAME MATCHES NintendoSwitch OR CMAKE_SYSTEM_NAME MATCHES Nintendo3DS)
+  if(CMAKE_SYSTEM_NAME MATCHES NintendoSwitch OR CMAKE_SYSTEM_NAME MATCHES Nintendo3DS OR PS4)
     option(BUILD_SHARED_LIBS "Build shared libraries" OFF)  
   else()
     option(BUILD_SHARED_LIBS "Build shared libraries" ON)
@@ -199,7 +197,7 @@ else()
       add_definitions(-DARM11 -DSWITCH -D__SWITCH__ -DNEED_READV -DNEED_WRITEV -DNEED_GETLOGIN_R)
       set(ARCH "-march=armv8-a -mtp=soft -fPIE")
       set(CMAKE_C_FLAGS "-g -Wall -O2 -ffast-math ${ARCH}")
-      include_directories(include include/switch include/smb2)
+      include_directories(include include/smb2)
       set(CMAKE_C_FLAGS "-Wno-unused-variable")
       set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fno-rtti -std=gnu++11")
       set(CMAKE_C_LDFLAGS "${CMAKE_C_FLAGS} -specs=switch.specs -g ${ARCH} -Wl,-Map,$(notdir $*.map)")
@@ -208,10 +206,17 @@ else()
       add_definitions(-DARM11 -D_3DS -D__3DS__ -DNEED_READV -DNEED_WRITEV -DNEED_GETLOGIN_R)
       set(ARCH "-march=armv6k -mfloat-abi=hard -mtune=mpcore -mtp=soft -fPIE")
       set(CMAKE_C_FLAGS "-Wno-unused-variable -g -Wall -O2 -mword-relocations -fomit-frame-pointer -ffast-math ${ARCH}")
-      include_directories(include include/n3ds include/smb2)
+      include_directories(include include/smb2)
       set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fno-rtti -fno-exceptions -std=gnu++11")
       set(CMAKE_C_LDFLAGS "${CMAKE_C_FLAGS} -specs=3dsx.specs -g ${ARCH} -Wl,-Map,$(notdir $*.map)")
-      add_compile_options("${CMAKE_C_FLAGS} ${CMAKE_LDFLAGS}")    
+      add_compile_options("${CMAKE_C_FLAGS} ${CMAKE_LDFLAGS}") 
+    elseif(PS4)
+      add_definitions(-DPS4_PLATFORM)
+      set(CMAKE_C_FLAGS "-funwind-tables")
+      #-fuse-init-array -emit-llvm broken...
+      include_directories(include include/smb2 sysroot ${OO_PS4_TOOLCHAIN} system ${OO_PS4_TOOLCHAIN}/include ${OO_PS4_TOOLCHAIN}/include/c++/v1)
+      set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS}")    
+      add_compile_options("${CMAKE_C_FLAGS}")          
     elseif(CMAKE_SYSTEM_NAME STREQUAL Solaris)
       find_library(SOCKET_LIBRARY socket)
       find_library(NSL_LIBRARY nsl)
