--- a/Makefile.platform
+++ b/Makefile.platform
@@ -1,4 +1,4 @@
-.PHONY: switch_all switch_install 3ds_all 3ds_install
+.PHONY: switch_all switch_install 3ds_all 3ds_install ps4_all ps4_install
 
 switch_all:
 	cmake -S . -B build "-DCMAKE_TOOLCHAIN_FILE=${DEVKITPRO}/cmake/Switch.cmake" 
@@ -12,6 +12,13 @@ switch_install: switch_all
 	cmake --build build
 
 3ds_install: 3ds_all
+	cmake --build build --target install
+
+ps4_all:
+	cmake -S . -B build "-DCMAKE_TOOLCHAIN_FILE=/opt/pacbrew/ps4/openorbis/cmake/ps4.cmake" "-DCMAKE_INSTALL_PREFIX=/opt/pacbrew/ps4/openorbis/" "-DCMAKE_PREFIX_PATH=/opt/pacbrew/ps4/openorbis/"
+	cmake --build build
+
+ps4_install: ps4_all
 	cmake --build build --target install
 
 clean:
