[W.I.P on IOP] Add cmake for ps2.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,6 +142,7 @@ else()
   else()
     cmake_minimum_required(VERSION 3.5)
   endif()
+
     project(libsmb2
             LANGUAGES C
             VERSION 4.0.0
@@ -152,7 +153,7 @@ else()
     set(INSTALL_INC_DIR "${CMAKE_INSTALL_PREFIX}/include" CACHE PATH "Installation directory for headers")
     set(INSTALL_PKGCONFIG_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/pkgconfig" CACHE PATH "Installation directory for pkgconfig (.pc) files")
     set(INSTALL_CMAKE_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/cmake/libsmb2" CACHE PATH "Installation directory for cmake (.cmake) files")
-  if(CMAKE_SYSTEM_NAME MATCHES NintendoSwitch OR CMAKE_SYSTEM_NAME MATCHES Nintendo3DS OR PS4)
+  if(CMAKE_SYSTEM_NAME MATCHES NintendoSwitch OR CMAKE_SYSTEM_NAME MATCHES Nintendo3DS OR PS4 OR PS2 OR PS2IPS OR PS2_IOP)
     option(BUILD_SHARED_LIBS "Build shared libraries" OFF)  
   else()
     option(BUILD_SHARED_LIBS "Build shared libraries" ON)
@@ -216,7 +217,15 @@ else()
       #-fuse-init-array -emit-llvm broken...
       include_directories(include include/smb2 sysroot ${OO_PS4_TOOLCHAIN} system ${OO_PS4_TOOLCHAIN}/include ${OO_PS4_TOOLCHAIN}/include/c++/v1)
       set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS}")    
-      add_compile_options("${CMAKE_C_FLAGS}")          
+      add_compile_options("${CMAKE_C_FLAGS}")
+    elseif(PS2 OR PS2IPS)
+      add_definitions(-DPS2_EE_PLATFORM -DPS2_PLATFORM -DNEED_BE64TOH -DNEED_POLL -DNEED_WRITEV -DNEED_READV -DNEED_GETLOGIN_R)
+      include_directories(include include/ps2 include/smb2)
+    elseif(PS2_IOP)
+      add_definitions(-DPS2_IOP_PLATFORM -DPS2_PLATFORM -DHAVE_CONFIG_H -DNEED_BE64TOH -DNEED_STRDUP -DNEED_READV -DNEED_WRITEV -DNEED_POLL -DNEED_GETPID -DNEED_RANDOM -DNEED_SRANDOM -DNEED_GETLOGIN_R)
+      include_directories(include include/ps2 include/smb2)
+      set(CMAKE_C_FLAGS "-Wall -Os -D_start=/**/") 
+      add_compile_options("${CMAKE_C_FLAGS}")               
     elseif(CMAKE_SYSTEM_NAME STREQUAL Solaris)
       find_library(SOCKET_LIBRARY socket)
       find_library(NSL_LIBRARY nsl)
