--- a/lib/Makefile.PS2_EE
+++ b/lib/Makefile.PS2_EE
@@ -1,4 +1,4 @@
-EE_CFLAGS = -DPS2_EE_PLATFORM -DPS2_PLATFORM -DHAVE_CONFIG_H -DNEED_BE64TOH -DNEED_POLL -DNEED_WRITEV -DNEED_READV -DNEED_GETLOGIN_R \
+EE_CFLAGS = -DPS2_EE_PLATFORM -D__PS2__ -DHAVE_CONFIG_H -DNEED_BE64TOH -DNEED_POLL -DNEED_WRITEV -DNEED_READV -DNEED_GETLOGIN_R \
 	  -D_U_=/**/ -I../include -I../include/ps2 -I../include/smb2
 
 EE_LIB = libsmb2_ip.a
