Add support for building dreamcast on cmake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,7 +137,7 @@ elseif(ESP_PLATFORM)
 
   register_component()  
 else() 
-  if(CMAKE_SYSTEM_NAME MATCHES NintendoSwitch OR CMAKE_SYSTEM_NAME MATCHES Nintendo3DS)
+  if(CMAKE_SYSTEM_NAME MATCHES NintendoSwitch OR CMAKE_SYSTEM_NAME MATCHES Nintendo3DS OR CMAKE_SYSTEM_NAME MATCHES Dreamcast)
     cmake_minimum_required(VERSION 3.13)
   else()
     cmake_minimum_required(VERSION 3.5)
@@ -153,7 +153,7 @@ else()
     set(INSTALL_INC_DIR "${CMAKE_INSTALL_PREFIX}/include" CACHE PATH "Installation directory for headers")
     set(INSTALL_PKGCONFIG_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/pkgconfig" CACHE PATH "Installation directory for pkgconfig (.pc) files")
     set(INSTALL_CMAKE_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/cmake/libsmb2" CACHE PATH "Installation directory for cmake (.cmake) files")
-  if(CMAKE_SYSTEM_NAME MATCHES NintendoSwitch OR CMAKE_SYSTEM_NAME MATCHES Nintendo3DS OR PS4 OR PS2 OR PS2IPS OR PS2_IOP)
+  if(CMAKE_SYSTEM_NAME MATCHES NintendoSwitch OR CMAKE_SYSTEM_NAME MATCHES Nintendo3DS OR PS4 OR PLATFORM_PS2 OR CMAKE_SYSTEM_NAME MATCHES Dreamcast)
     option(BUILD_SHARED_LIBS "Build shared libraries" OFF)  
   else()
     option(BUILD_SHARED_LIBS "Build shared libraries" ON)
@@ -198,7 +198,6 @@ else()
       add_definitions(-DARM11 -DSWITCH -D__SWITCH__ -DNEED_READV -DNEED_WRITEV -DNEED_GETLOGIN_R)
       set(ARCH "-march=armv8-a -mtp=soft -fPIE")
       set(CMAKE_C_FLAGS "-g -Wall -O2 -ffast-math ${ARCH}")
-      include_directories(include include/smb2)
       set(CMAKE_C_FLAGS "-Wno-unused-variable")
       set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fno-rtti -std=gnu++11")
       set(CMAKE_C_LDFLAGS "${CMAKE_C_FLAGS} -specs=switch.specs -g ${ARCH} -Wl,-Map,$(notdir $*.map)")
@@ -207,7 +206,6 @@ else()
       add_definitions(-DARM11 -D_3DS -D__3DS__ -DNEED_READV -DNEED_WRITEV -DNEED_GETLOGIN_R)
       set(ARCH "-march=armv6k -mfloat-abi=hard -mtune=mpcore -mtp=soft -fPIE")
       set(CMAKE_C_FLAGS "-Wno-unused-variable -g -Wall -O2 -mword-relocations -fomit-frame-pointer -ffast-math ${ARCH}")
-      include_directories(include include/smb2)
       set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fno-rtti -fno-exceptions -std=gnu++11")
       set(CMAKE_C_LDFLAGS "${CMAKE_C_FLAGS} -specs=3dsx.specs -g ${ARCH} -Wl,-Map,$(notdir $*.map)")
       add_compile_options("${CMAKE_C_FLAGS} ${CMAKE_LDFLAGS}") 
@@ -215,17 +213,16 @@ else()
       add_definitions(-DPS4_PLATFORM)
       set(CMAKE_C_FLAGS "-funwind-tables")
       #-fuse-init-array -emit-llvm broken...
-      include_directories(include include/smb2 sysroot ${OO_PS4_TOOLCHAIN} system ${OO_PS4_TOOLCHAIN}/include ${OO_PS4_TOOLCHAIN}/include/c++/v1)
       set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS}")    
       add_compile_options("${CMAKE_C_FLAGS}")
     elseif(PS2 OR PS2IPS)
-      add_definitions(-DPS2_EE_PLATFORM -DPS2_PLATFORM -DNEED_BE64TOH -DNEED_POLL -DNEED_WRITEV -DNEED_READV -DNEED_GETLOGIN_R)
-      include_directories(include include/ps2 include/smb2)
+      add_definitions(-DNEED_BE64TOH -DNEED_POLL -DNEED_WRITEV -DNEED_READV -DNEED_GETLOGIN_R)
     elseif(PS2_IOP)
-      add_definitions(-DPS2_IOP_PLATFORM -DPS2_PLATFORM -DHAVE_CONFIG_H -DNEED_BE64TOH -DNEED_STRDUP -DNEED_READV -DNEED_WRITEV -DNEED_POLL -DNEED_GETPID -DNEED_RANDOM -DNEED_SRANDOM -DNEED_GETLOGIN_R)
-      include_directories(include include/ps2 include/smb2)
-      set(CMAKE_C_FLAGS "-Wall -Os -D_start=/**/") 
-      add_compile_options("${CMAKE_C_FLAGS}")               
+      add_definitions(-DHAVE_CONFIG_H -DNEED_BE64TOH -DNEED_STRDUP -DNEED_READV -DNEED_WRITEV -DNEED_POLL -DNEED_GETPID -DNEED_RANDOM -DNEED_SRANDOM -DNEED_GETLOGIN_R)
+      set(CMAKE_C_FLAGS "-Wall") 
+      add_compile_options("${CMAKE_C_FLAGS}")
+    elseif(CMAKE_SYSTEM_NAME MATCHES Dreamcast)
+      add_definitions(-DNEED_WRITEV -DNEED_READV -DHAVE_CONFIG_H -DNEED_GETLOGIN_R)             
     elseif(CMAKE_SYSTEM_NAME STREQUAL Solaris)
       find_library(SOCKET_LIBRARY socket)
       find_library(NSL_LIBRARY nsl)
