--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -58,12 +58,36 @@ set(HEADERS
     ${SMB2_INCLUDE}/smb2-errors.h
     ${SMB2_INCLUDE}/smb2.h)
 
+if(PS2)
+add_library(smb2_ip ${SOURCES} ${HEADERS})
+target_link_libraries(smb2_ip PUBLIC ${core_DEPENDS} ${CORE_LIBRARIES})
+target_include_directories(smb2_ip PUBLIC ${INCLUDE_PATH})
+set_target_properties(smb2_ip PROPERTIES
+                           VERSION ${PROJECT_VERSION}
+                           SOVERSION ${SOVERSION})
+elseif(PS2IPS)
+add_library(smb2_ips ${SOURCES} ${HEADERS})
+target_link_libraries(smb2_ips PUBLIC ${core_DEPENDS} ${CORE_LIBRARIES})
+target_include_directories(smb2_ips PUBLIC ${INCLUDE_PATH})
+set_target_properties(smb2_ips PROPERTIES
+                           VERSION ${PROJECT_VERSION}
+                           SOVERSION ${SOVERSION})
+elseif(PS2_IOP)
+add_library(smb2_iop ${SOURCES} ${HEADERS})
+target_link_libraries(smb2_iop PUBLIC ${core_DEPENDS} ${CORE_LIBRARIES})
+target_include_directories(smb2_iop PUBLIC ${INCLUDE_PATH})
+set_target_properties(smb2_iop PROPERTIES
+                           VERSION ${PROJECT_VERSION}
+                           SOVERSION ${SOVERSION})
+else()
 add_library(smb2 ${SOURCES} ${HEADERS})
 target_link_libraries(smb2 PUBLIC ${core_DEPENDS} ${CORE_LIBRARIES})
 target_include_directories(smb2 PUBLIC ${INCLUDE_PATH})
 set_target_properties(smb2 PROPERTIES
                            VERSION ${PROJECT_VERSION}
                            SOVERSION ${SOVERSION})
+endif()
+
 if(NOT MSVC)
   add_definitions("-D_U_=__attribute__((unused))")
 else()
@@ -73,7 +97,24 @@ else()
   endif()
 endif()
 
+if(PS2)
+install(TARGETS smb2_ip EXPORT smb2_ip
+                     RUNTIME DESTINATION bin
+                     ARCHIVE DESTINATION lib${LIB_SUFFIX}
+                     LIBRARY DESTINATION lib${LIB_SUFFIX})
+elseif(PS2IPS)
+install(TARGETS smb2_ips EXPORT smb2_ips
+                     RUNTIME DESTINATION bin
+                     ARCHIVE DESTINATION lib${LIB_SUFFIX}
+                     LIBRARY DESTINATION lib${LIB_SUFFIX})
+elseif(PS2_IOP)
+install(TARGETS smb2_iop EXPORT smb2_iop
+                     RUNTIME DESTINATION bin
+                     ARCHIVE DESTINATION lib${LIB_SUFFIX}
+                     LIBRARY DESTINATION lib${LIB_SUFFIX})
+else()
 install(TARGETS smb2 EXPORT smb2
                      RUNTIME DESTINATION bin
                      ARCHIVE DESTINATION lib${LIB_SUFFIX}
                      LIBRARY DESTINATION lib${LIB_SUFFIX})
+endif()
