--- a/Makefile.platform
+++ b/Makefile.platform
@@ -22,7 +22,7 @@ ps4_install: ps4_all
 	cmake --build build --target install
 
 ps2_ee_all:
-	cmake -S . -B build "-DCMAKE_TOOLCHAIN_FILE=${PS2DEV}/ps2sdk/ps2dev.cmake" "-DCMAKE_INSTALL_PREFIX=${PS2SDK}/ee" "-DCMAKE_PREFIX_PATH=${PS2SDK}/ee"
+	cmake -S . -B build "-DCMAKE_TOOLCHAIN_FILE=${PS2DEV}/share/ps2dev.cmake" "-DCMAKE_INSTALL_PREFIX=${PS2SDK}/ee" "-DCMAKE_PREFIX_PATH=${PS2SDK}/ee"
 	cmake --build build
 
 ps2_ee_install: ps2_ee_all
