--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,7 +137,7 @@ elseif(ESP_PLATFORM)
 
   register_component()  
 else() 
-  if(CMAKE_SYSTEM_NAME MATCHES NintendoSwitch OR CMAKE_SYSTEM_NAME MATCHES Nintendo3DS OR CMAKE_SYSTEM_NAME MATCHES Dreamcast)
+  if(CMAKE_SYSTEM_NAME MATCHES NintendoSwitch OR CMAKE_SYSTEM_NAME MATCHES Nintendo3DS OR CMAKE_SYSTEM_NAME MATCHES Dreamcast OR CMAKE_SYSTEM_NAME MATCHES NintendoGameCube OR CMAKE_SYSTEM_NAME MATCHES NintendoDS OR CMAKE_SYSTEM_NAME MATCHES NintendoWii OR CMAKE_SYSTEM_NAME MATCHES CafeOS)
     cmake_minimum_required(VERSION 3.13)
   else()
     cmake_minimum_required(VERSION 3.5)
@@ -153,7 +153,7 @@ else()
     set(INSTALL_INC_DIR "${CMAKE_INSTALL_PREFIX}/include" CACHE PATH "Installation directory for headers")
     set(INSTALL_PKGCONFIG_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/pkgconfig" CACHE PATH "Installation directory for pkgconfig (.pc) files")
     set(INSTALL_CMAKE_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/cmake/libsmb2" CACHE PATH "Installation directory for cmake (.cmake) files")
-  if(CMAKE_SYSTEM_NAME MATCHES NintendoSwitch OR CMAKE_SYSTEM_NAME MATCHES Nintendo3DS OR PS4 OR PLATFORM_PS2 OR CMAKE_SYSTEM_NAME MATCHES Dreamcast)
+  if(CMAKE_SYSTEM_NAME MATCHES NintendoSwitch OR CMAKE_SYSTEM_NAME MATCHES Nintendo3DS OR PS4 OR PLATFORM_PS2 OR CMAKE_SYSTEM_NAME MATCHES Dreamcast OR CMAKE_SYSTEM_NAME MATCHES NintendoGameCube OR CMAKE_SYSTEM_NAME MATCHES NintendoDS OR CMAKE_SYSTEM_NAME MATCHES NintendoWii OR CMAKE_SYSTEM_NAME MATCHES CafeOS)
     option(BUILD_SHARED_LIBS "Build shared libraries" OFF)  
   else()
     option(BUILD_SHARED_LIBS "Build shared libraries" ON)
@@ -208,7 +208,28 @@ else()
       set(CMAKE_C_FLAGS "-Wno-unused-variable -g -Wall -O2 -mword-relocations -fomit-frame-pointer -ffast-math ${ARCH}")
       set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fno-rtti -fno-exceptions -std=gnu++11")
       set(CMAKE_C_LDFLAGS "${CMAKE_C_FLAGS} -specs=3dsx.specs -g ${ARCH} -Wl,-Map,$(notdir $*.map)")
-      add_compile_options("${CMAKE_C_FLAGS} ${CMAKE_LDFLAGS}") 
+      add_compile_options("${CMAKE_C_FLAGS} ${CMAKE_LDFLAGS}")
+    elseif(CMAKE_SYSTEM_NAME MATCHES NintendoDS)
+      add_definitions(-DARM9 -D__NDS__ -DNEED_READV -DNEED_WRITEV -DNEED_GETLOGIN_R -DNEED_GETADDRINFO -DNEED_FREEADDRINFO -DNEED_POLL)
+      set(CMAKE_C_FLAGS "-Wno-format -Wpointer-arith")      
+      set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fno-rtti -fno-exceptions -std=gnu++11")
+      set(CMAKE_C_LDFLAGS "${CMAKE_C_FLAGS} -specs=ds_arm9.specs -g")
+      add_compile_options("${CMAKE_C_FLAGS} ${CMAKE_LDFLAGS}")      
+    elseif(CMAKE_SYSTEM_NAME MATCHES NintendoGameCube)      
+      add_definitions(-DGEKKO -D__GC__ -DNEED_READV -DNEED_WRITEV -DNEED_GETLOGIN_R -DNEED_GETADDRINFO -DNEED_FREEADDRINFO -DNEED_POLL)
+      set(CMAKE_C_FLAGS "-g")
+      #-O3 -Wall      
+      add_compile_options("${CMAKE_C_FLAGS}")    
+    elseif(CMAKE_SYSTEM_NAME MATCHES NintendoWii)
+      add_definitions(-DGEKKO -D__WII__ -DNEED_READV -DNEED_WRITEV -DNEED_GETLOGIN_R -DNEED_GETADDRINFO -DNEED_FREEADDRINFO -DNEED_POLL)
+      set(CMAKE_C_FLAGS "-g")
+      #-O3 -Wall      
+      add_compile_options("${CMAKE_C_FLAGS}")
+    elseif(CMAKE_SYSTEM_NAME MATCHES CafeOS)
+      add_definitions(-D__WIIU__ -DNEED_READV -DNEED_WRITEV -DNEED_GETLOGIN_R)
+      set(CMAKE_C_FLAGS "-g")
+      #-O3 -Wall      
+      add_compile_options("${CMAKE_C_FLAGS}")    
     elseif(PS4)
       add_definitions(-DPS4_PLATFORM)
       set(CMAKE_C_FLAGS "-funwind-tables")
