--- a/Makefile.platform
+++ b/Makefile.platform
@@ -14,6 +14,34 @@ switch_install: switch_all
 3ds_install: 3ds_all
 	cmake --build build --target install
 
+gc_all:
+	cmake -S . -B build "-DCMAKE_TOOLCHAIN_FILE=${DEVKITPRO}/cmake/GameCube.cmake" 
+	cmake --build build
+
+gc_install: gc_all
+	cmake --build build --target install
+
+nds_all:
+	cmake -S . -B build "-DCMAKE_TOOLCHAIN_FILE=${DEVKITPRO}/cmake/NDS.cmake" 
+	cmake --build build
+
+nds_install: nds_all
+	cmake --build build --target install
+
+wii_all:
+	cmake -S . -B build "-DCMAKE_TOOLCHAIN_FILE=${DEVKITPRO}/cmake/Wii.cmake" 
+	cmake --build build
+
+wii_install: wii_all
+	cmake --build build --target install
+
+wiiu_all:
+	cmake -S . -B build "-DCMAKE_TOOLCHAIN_FILE=${DEVKITPRO}/cmake/WiiU.cmake" 
+	cmake --build build
+
+wiiu_install: wiiu_all
+	cmake --build build --target install
+
 ps4_all:
 	cmake -S . -B build "-DCMAKE_TOOLCHAIN_FILE=/opt/pacbrew/ps4/openorbis/cmake/ps4.cmake" "-DCMAKE_INSTALL_PREFIX=/opt/pacbrew/ps4/openorbis/" "-DCMAKE_PREFIX_PATH=/opt/pacbrew/ps4/openorbis/"
 	cmake --build build
