--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -138,7 +138,7 @@ jobs:
     - name: git checkout
       uses: actions/checkout@v3
 
-    - name: Compile Nintendo WII-U
+    - name: Compile Nintendo Gamecube
       run: |
         cd lib
         make -f Makefile.GC clean
