--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -45,7 +45,7 @@ jobs:
     steps:
     - name: Install dependencies
       run: |
-        apk add build-base git zip gawk python3 py3-pip bash
+        apk add cmake build-base git zip gawk python3 py3-pip bash
 
     - name: git checkout
       uses: actions/checkout@v3
