--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -112,7 +112,7 @@ jobs:
 
     - name: Compile VITA
       run: |
-        sh ./build_vita.sh   
+        make -f Makefile.platform vita_all clean   
              
   build-wii:
     name: WII build
