--- a/lib/Makefile.AMIGA
+++ b/lib/Makefile.AMIGA
@@ -5,9 +5,10 @@ STRIP  = ppc-amigaos-strip
 
 OPTIMIZE = -O2
 DEBUG    = -gstabs
-WARNINGS = -Wall -Werror -Wwrite-strings
+WARNINGS = -Wall -Wno-pointer-sign -Wno-discarded-qualifiers -Wwrite-strings 
+#TODO: -Werror
 INCLUDES = -I. -I../include -I../include/smb2 -I../include/amiga_os
-DEFINES  = -DHAVE_CONFIG_H "-D_U_=__attribute__((unused))" -DNEED_POLL -DNEED_GETADDRINFO -DNEED_FREEADDRINFO -DNEED_GETLOGIN_R -DNEED_RANDOM -DNEED_SRANDOM
+DEFINES  = -DHAVE_CONFIG_H "-D_U_=__attribute__((unused))" -DNEED_POLL -DNEED_GETADDRINFO -DNEED_FREEADDRINFO -DNEED_GETLOGIN_R -DHAVE_LINGER
 
 CFLAGS  = $(OPTIMIZE) $(DEBUG) $(WARNINGS) $(INCLUDES) $(DEFINES)
 
