--- a/lib/Makefile.AMIGA
+++ b/lib/Makefile.AMIGA
@@ -5,7 +5,7 @@ STRIP  = ppc-amigaos-strip
 
 OPTIMIZE = -O2
 DEBUG    = -gstabs
-WARNINGS = -Wall -Wno-pointer-sign -Wno-discarded-qualifiers -Wwrite-strings -Werror
+WARNINGS = -Wall -Werror -Wwrite-strings
 INCLUDES = -I. -I../include -I../include/smb2 -I../include/amiga_os
 DEFINES  = -DHAVE_CONFIG_H "-D_U_=__attribute__((unused))" -DNEED_POLL -DNEED_GETADDRINFO -DNEED_FREEADDRINFO -DNEED_GETLOGIN_R -DHAVE_LINGER
 
