--- a/Makefile.platform
+++ b/Makefile.platform
@@ -67,23 +67,24 @@ dc_install: dc_all
 	cmake --build build --target install
 
 ps2_ee_all:
-	cmake -S . -B build  "-DCMAKE_TOOLCHAIN_FILE=${PS2DEV}/share/ps2dev.cmake" "-DCMAKE_INSTALL_PREFIX=/usr/local/ps2dev/ps2sdk/ports" "-DCMAKE_PREFIX_PATH=/usr/local/ps2dev/ps2sdk/ports"
+	cmake -S . -B build  "-DCMAKE_TOOLCHAIN_FILE=${PS2DEV}/share/ps2dev.cmake" "-DCMAKE_INSTALL_PREFIX=${PS2SDK}/ports" "-DCMAKE_PREFIX_PATH=${PS2SDK}/ports"
 	cmake --build build
 
 ps2_ee_install: ps2_ee_all
 	cmake --build build --target install
 
 ps2_ips_all:
-	CFLAGS="-DPS2IPS" cmake -S . -B build "-DCMAKE_TOOLCHAIN_FILE=cmake/PS2/ps2dev_ee_ips.cmake" "-DCMAKE_INSTALL_PREFIX=/usr/local/ps2dev/ps2sdk/ports" "-DCMAKE_INSTALL_PREFIX=/usr/local/ps2dev/ps2sdk/ports"
+	CFLAGS="-DPS2IPS" cmake -S . -B build "-DCMAKE_TOOLCHAIN_FILE=${PS2DEV}/share/ps2dev.cmake" "-DCMAKE_INSTALL_PREFIX=${PS2SDK}/ports" "-DCMAKE_INSTALL_PREFIX=${PS2SDK}/ports"
 	cmake --build build
 
 ps2_ips_install: ps2_ips_all
-	cmake --build build --target install
+	mv build/lib/libsmb2_ip.a build/lib/libsmb2_ips.a
+	cp -fr build/lib/libsmb2_ips.a /usr/local/ps2dev/ps2sdk/ports
 
 ps2_iop_all:
-	cmake -S . -B build "-DCMAKE_TOOLCHAIN_FILE=${PS2DEV}/share/ps2dev_iop.cmake" "-DCMAKE_INSTALL_PREFIX=/usr/local/ps2dev/ps2sdk/ports_iop" "-DCMAKE_INSTALL_PREFIX=/usr/local/ps2dev/ps2sdk/ports_iop"
+	cmake -S . -B build "-DCMAKE_TOOLCHAIN_FILE=${PS2DEV}/share/ps2dev_iop.cmake" "-DCMAKE_INSTALL_PREFIX=${PS2SDK}/ports_iop" "-DCMAKE_INSTALL_PREFIX=${PS2SDK}/ports_iop"
 	cmake --build build
-
+	
 ps2_iop_install: ps2_iop_all
 	cmake --build build --target install
 
